style.css
@import url("https://fonts.googleapis.com/css2?family=Akronim&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Akronim&family=Playfair:wght@300&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Akronim&family=New+Rocker&family=Playfair:wght@300&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Akronim&family=Nerko+One&family=New+Rocker&family=Playfair:wght@300&display=swap");
@import url('https://fonts.googleapis.com/css2?family=Akronim&family=Nerko+One&family=New+Rocker&family=Pathway+Gothic+One&family=Playfair:wght@300&display=swap');
html,
body {
  background-color: rgb(0, 0, 0);
  margin: 0;
  /* height: 100vh; */
  /* overflow-x: hidden; */
  background-color: black;
}

nav {
  background-color: black;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  top:0;
  position: sticky;
  z-index: 3;
}

.a-tag{
  text-decoration: none;
  height: fit-content;
}

/* Initial styles for the logo */
#logo {
  width: 200px;
  height: auto;
  transition: width 0.3s ease-in-out; /* Add a transition effect */
}

/* Styles for the smaller logo */
#logo.shrink {
  width: 100px;
}



.page-links {
  display: flex;
  justify-content: space-around;
  gap: 30px;
  margin-top: 60px;
  margin-right: 60px;
  color: white;
  
}

li {
  color: white;
  list-style: none;
  font-size: 21px;
  cursor: pointer;
  transition: color 200ms;
  /* font-family: "New Rocker", cursive; */
  /* font-family: 'Pathway Gothic One', sans-serif; */
  /* font-size: 32px; */
  
}

li:hover {
  color: rgb(168, 0, 0);
}

span {
  font-size: 21px;
  /* font-size: 32px; */
}

figure {
  margin: 0;
  width: 100%;
  height: 400px;
  background-image: url("images/dish1.jpg");
  background-size: cover;
  background-position: center;
}

.ol{
color: black;
}

.dish1 {
  margin: 0;
  width: 100%;
  height: 100%;
}

main {
  background-image: url("images/chopsticks.jpg");
  /* filter: grayscale(0.6); */
  background-position: center;
  background-size: cover;
  padding: 25px;
  display: flex;
  justify-content: space-around;
  background-color: black;
  flex-wrap: wrap;
  gap: 20px;
}



.business-hours {
  display: flex;
  flex-direction: column;
  width: min-content;
  gap: 10px;
  background-color: rgba(255, 255, 255, 0.774);
  color: rgb(0, 0, 0);
  
  padding: 10px;
  border-radius: 10px;
  width: 300px;
  /* height: max-content; */
  font-family: "New Rocker", cursive;

}

.category{
  text-align: center;
  text-decoration: underline;
}

.container{
  display: flex;
  justify-content: space-between;
}

.day {
  font-weight: bold;
}

.hours {
  color: #000000;
}

.c-image {
  height: 400px;
}

.over-lay {
  font-family: "Akronim", cursive;
  font-family: "New Rocker", cursive;
  /* font-family: fantasy; */
  font-weight: 100;
  position: absolute;
  background-color: rgba(0, 0, 0, 0.437);
  color: rgb(255, 255, 255);
  width: 100%;
  /* text-shadow: red 0px -2px; */
}

.copy-right{
  color: rgb(255, 255, 255);
  text-align: center;
  background-color: rgb(0, 0, 0);
}

.map{
  /* width: 400px;
  height: 400px; */
  /* border-radius: 50%; */
  border-radius: 10px;
}




footer{
/* height: 100%; */
}

.phone {
  position: fixed;
  bottom: 0;
  right: 0;
  margin: 10px;
  font-size: 26px;
  color: rgb(30, 193, 98);
  transition: color 300ms;
  width: min-content;
  height: max-content;
}

.phone-color{
  color: rgb(30, 193, 98);
  transition: color 300ms;
  width: min-content;
  height: max-content;

}

.facebook {
  position: fixed;
  bottom: 0;
  right: 0;
  margin: 12px;
  margin-right: 60px;
  font-size: 26px;
  color: rgb(106, 149, 235);
  transition: color 300ms;
  /* background-color: rgb(255, 255, 255);
  border-radius: 20px; */

  /* border: solid; */
}


.instagram {
  position: fixed;
  bottom: 0;
  right: 0;
  margin: 12px;
  margin-right: 110px;
  font-size: 26px;
  color: rgb(255, 0, 144);
  transition: color 300ms;
  /* background-color: rgb(255, 255, 255);
  border-radius: 10px; */


}

.yelp {
  position: fixed;
  bottom: 0;
  right: 0;
  margin: 12px;
  margin-right: 150px;
  font-size: 26px;
  color: rgb(234, 16, 0);
  transition: color 300ms;
  /* background-color: rgb(255, 255, 255);
  border-radius: 10px; */
  cursor: pointer;
  width: min-content;
  height: max-content;
}

.yelp-color{
  color: rgb(234, 16, 0);
  transition: color 300ms;
  width: min-content;

}

.phone-color:hover, .facebook:hover, .instagram:hover, .yelp-color:hover{
  color: rgb(177, 0, 0);
}



@media screen and (max-width: 700px) {

  nav{
    justify-content: center;
  }

  .page-links{
    margin-top: 0;
    margin-right: 10px;
    margin-left: -15px;
  }
}
.carousel-caption {
  font-size: 24px;
}



@media (max-width: 768px) {
  .carousel-caption {
    font-size: 16px !important;
  }
  .quote{
    font-size: 16px !important;
  }
  .name{
    font-size: 18px;
  }
}


@media (max-width: 538px) {
  .phone {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 6;
    margin: 12px;
    /* margin-right: 40px; */
    font-size: 26px;
    color: rgb(30, 193, 98);
    /* margin-top: 40px; */
    /* margin-left: 30px; */
    width: min-content;
  }
  
  .facebook {
    position: fixed;
    top: 0;
    right: 0;
    margin: 12px;
    margin-top: 60px;
    margin-right: 10px;
    font-size: 26px;
    color: rgb(106, 149, 235);
    z-index: 6;
    
  }
  
  .instagram {
    position: fixed;
    top: 0;
    right: 0;
    /* margin: 12px; */
    margin-right: 10px;
    font-size: 26px;
    color: rgb(255, 152, 210);
    z-index: 4;
  }

  .yelp {
    position: fixed;
    top: 0;
    left: 0;
    margin: 12px;
    margin-top: 60px;
    font-size: 26px;
    color: rgb(234, 16, 0);
    cursor: pointer;
    z-index: 4;
    width: min-content;
  }
  .yelp-color {
    z-index:4;
    width: min-content;
  }
  
}

